# Analogue_of_Twitter

./: .env.example  README.md  pyproject.toml  text.txt
Analogue_of_Twitter/: .evn.example  manage.py
Analogue_of_Twitter/Analogue_of_Twitter/: asgi.py  settings.py  urls.py  wsgi.py
Analogue_of_Twitter/constant/: mixin.py
Analogue_of_Twitter/page/: admin.py  endpoints.py  models.py  serializers.py  urls.py
Analogue_of_Twitter/page/migrations/: 0001_create_model_page_post_statistic.py  0001_create_models_page.py
Analogue_of_Twitter/post/: admin.py  endpoints.py  models.py  serializers.py  urls.py
Analogue_of_Twitter/post/migrations/: 0001_create_model_page_post_statistic.py  0001_create_models_page.py
Analogue_of_Twitter/statistic/: admin.py  endpoints.py  models.py  serializers.py  urls.py
Analogue_of_Twitter/statistic/migrations/: 0001_create_model_page_post_statistic.py  0001_create_models_page.py
Analogue_of_Twitter/user/: celery.py  endpoints.py  manager.py  models.py  serializers.py  tasks.py  urls.py
Analogue_of_Twitter/user/migrations/: 0001_create_model_user.py
