[tool.poetry]
name = "analogue-of-twitter"
version = "0.1.0"
description = ""
authors = ["Chikago13 <sivko2201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
pyjwt = "^2.8.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^3.0.3"
black = "^23.11.0"
isort = "^5.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
